--- a/proposal-tex/report.bib
+++ b/proposal-tex/report.bib
@@ -1,44 +1,17 @@
-% @BOOK{hello,
-%   title={Hello, Android: introducing Google's mobile development platform},
-%   author={Burnette, Ed},
-%   year={2010},
-%   publisher={Pragmatic Bookshelf},
-%   edition=3
-% }
+@MISC{nsd,
+  title = {{Android API: Network Service Discovery}},
+  howpublished = {\url{https://developer.android.com/training/connect-devices-wirelessly/nsd.html}},
+  note = {Accessed on 13 Nov 2017}
+}
 
-% @MISC{devServices,
-%   title = {{Services: Sending Notifications to the User}},
-%   howpublished = {\url{http://developer.android.com/guide/components/services.html#Notifications}},
-%   note = {Accessed on 29 Aug 2013}
-% }
+@MISC{youtubeExtractor,
+  title = {{Android based YouTube URL extractor}},
+  howpublished = {\url{https://github.com/HaarigerHarald/android-youtubeExtractor}},
+  note = {Accessed on 13 Nov 2017}
+}
 
-% @MISC{estimote,
-%   title = {{Estimote}},
-%   howpublished = {\url{http://estimote.com/}},
-%   note = {Accessed on 26 Oct 2015}
-% }
-
-% @PHDTHESIS{REST,
-% author = {Fielding, Roy Thomas},
-% school = {UC Irvine},
-% title = {{Architectural Styles and the Design of Network-based Software Architectures}},
-% type = {PhD Thesis},
-
-% year = {2000}
-% }
-
-% @MISC{RFC2616,
-%   author = {R. Fielding and J. Gettys and J. Mogul and H. Frystyk and L. Masinter and P. Leach and T. Berners-Lee},
-%   title = {{Hypertext Transfer Protocol -- HTTP/1.1}},
-%   howpublished = {RFC 2616},
-%   year = {1999},
-%   url = {http://tools.ietf.org/html/rfc2616}
-% }
-
-% @INPROCEEDINGS{WoTarch,
-%   author = {Dominique Guinard and Vlad Trifa and Erik Wilde},
-%   title = {{A Resource Oriented Architecture for the Web of Things}},
-%   booktitle = {Proc. IoT},
-%   year = {2010},
-%   address = {Tokyo, Japan}
-% }
+@MISC{balsamiq,
+  title = {{Balsamiq UI mockup desgin tool}},
+  howpublished = {\url{https://balsamiq.com/}},
+  note = {Accessed on 13 Nov 2017}
+}
