adding downvote to mockup

--- a/proposal-tex/proposal.tex
+++ b/proposal-tex/proposal.tex
@@ -167,7 +167,7 @@ from a host. If an announcement is received, the party name shows up
 in a list and can be joined.
 
 The playlist view has a list of all items currently in the play queue.
-Every list item has a button to downvote (not shown in mockup).
+Every list item has a button to downvote.
 
 Past playlist are available from the home screen, or from the action bar
 overflow menu in the playlist view, which also has an option to leave a party.
