Change 'like' to 'as'

--- a/proposal-tex/proposal.tex
+++ b/proposal-tex/proposal.tex
@@ -123,7 +123,7 @@ bothered with song requests.
 can add songs to. One device will start a session (the \emph{host}, usually connected
 to a stereo), and other devices on the local network can join in and start
 adding songs to the queue.  Apart from choosing the name for the party,
-the host will have the same functionality and capabilities like the other clients.
+the host will have the same functionality and capabilities as the other clients.
 Clients can \emph{downvote} a specific song, and when the host realizes
 a majority of clients downvoted a song, it will be removed from the play queue.  
 Past sessions will be kept, so the users can review playlists at a later date.
