Finish up milestone dates

--- a/proposal-tex/proposal.tex
+++ b/proposal-tex/proposal.tex
@@ -200,8 +200,8 @@ the background.
 \subsection*{Work plan}
 \begin{itemize}
     \item {\bf WP1/WP2:} 25.11.17 (lutobler, brotobia, bdino)
-    \item {\bf WP2:} (moserfl, llendi, arnomark)
-    \item {\bf WP3:} (bdino, moserfl, arnomark)
+    \item {\bf WP2:} 02.12.17 (moserfl, llendi, arnomark)
+    \item {\bf WP3:} 16.12.17 (bdino, moserfl, arnomark)
 \end{itemize}
 
 \subsection*{Deadlines}
