--- a/proposal-tex/proposal.tex
+++ b/proposal-tex/proposal.tex
@@ -74,7 +74,8 @@
 
 % General information
 
-\title{Kompose - A distributed playlist}
+\title{Kompose\\
+\normalsize{A Distributed Playlist for Android}}
 \subtitle{subtitle}
 
 % Use the \alignauthor commands to handle the names
@@ -85,20 +86,12 @@
 % reasons) and the remaining two appear in the \additionalauthors section.
 %
 \author{
-% You can go ahead and credit any number of authors here,
-% e.g. one 'row of three' or two rows (consisting of one row of three
-% and a second row of one, two or three).
-%
-% The command \alignauthor (no curly braces needed) should
-% precede each author name, affiliation/snail-mail address and
-% e-mail address. Additionally, tag each line of
-% affiliation/address with \affaddr, and tag the
-% e-mail address with \email.
-%
-% 1st. author
-    \alignauthor \normalsize{Mark Arnold (15-917-701), Dino Bollinger (14-923-676), Tobias Brodmann (15-934-565), Lino Lendi (11-714-383), Florian Moser (15-930-704), Lukas Tobler (14-942-007)}\\
-	% \affaddr{\normalsize{ETH ID-1 15-917-701, ETH ID-2 14-923-676, ETH ID-3 15-934-565, ETH ID-4 11-714-383, ETH ID-5 15-930-704, ETH ID-6 14-942-007}}\\
-	\email{\normalsize{arnomark@student.ethz.ch, bdino@student.ethz.ch, brotobia@student.ethz.ch, llendi@student.ethz.ch, moserfl@studen.ethz.ch, lutobler@student.ethz.ch}}
+	\alignauthor\normalsize{Mark Arnold, Dino Bollinger, Tobias Brodmann}\\
+	\affaddr{\normalsize{15-917-701, 14-923-676, 15-934-565}}\\
+	\email{\normalsize{arnomark@student.ethz.ch, bdino@student.ethz.ch, brotobia@student.ethz.ch}}
+\alignauthor \normalsize{Lino Lendi, Florian Moser, Lukas Tobler}\\
+	\affaddr{\normalsize{11-714-383, 15-930-704, 14-942-007}}\\
+	\email{\normalsize{llendi@student.ethz.ch, moserfl@studen.ethz.ch, lutobler@student.ethz.ch}}
 }
 
 \begin{document}
@@ -106,78 +99,129 @@
 \maketitle
 
 \begin{abstract}
-\emph{Kompose} is an Android app that allows many participants to share a playlist and
-request songs to be played at social events. Users will be able to share,
-synchronize and vote on YouTube songs in a fully distributed fashion. One device will
-act as the host which controls the music station and plays the songs in the play queue
-with the order agreed upon by all clients.
+\emph{Kompose} is an Android application that aims to allow multiple independent participants to form 
+a local party through which they share a music playlist and request songs to be played at social events.
+The songs will be downloaded from Youtube, and each participant will be able to share, synchronize and 
+vote on what song they want to be played next in a fully distributed fashion. One device will act as the host 
+which controls the playback of the queue, while the order of the songs will be agreed upon by all clients.
+
 \end{abstract}
-
+%
 \section{Introduction}
-At social events, such as parties, we often face the problem of deciding who is
-in charge of the music being played. In our experience, many people will be
-dissatisfied with that persons taste in music, and he will frequently be
-bothered with song requests.
-
+At social events, such as clubs or parties, we often face the problem of deciding which person should be
+in charge of the music being played. From our experience, many people often disagree with a particular 
+DJs taste in music, and are subsequently dissatisfied with the chosen playlist. And even if the DJ only takes
+suggestions from the participants themselves, there may often be fringe tastes that are only enjoyed by a 
+small minority while others are left completely alienated. The DJ may also be overwhelmed by requests, and
+would benefit greatly from a simple way for people to keep track of what has already been requested.\\\\
+%
 \emph{Kompose} solves this problem by creating a distributed playlist that anyone
-can add songs to. One device will start a session (the \emph{host}, usually connected
+can add songs to. 
+One device will start a session (the \emph{host}, usually connected
 to a stereo), and other devices on the local network can join in and start
-adding songs to the queue.  Apart from choosing the name for the party,
-the host will have the same functionality and capabilities as the other clients.
-Clients can \emph{downvote} a specific song, and when the host realizes
-a majority of clients downvoted a song, it will be removed from the play queue.  
-Past sessions will be kept, so the users can review playlists at a later date.
-
-The source of music will be YouTube. Clients send a YouTube URL with
-their song request to the host. The host will then download and cache the
-audio from YouTube ahead of time to allow continuous playback.
-
-The challenges in this project are automatically announcing and finding
-services on the network, synchronizing the playlist state to all devices,
-and keeping track of all clients that are still alive (to allow the majority based voting). 
-Adding new songs to the playlist, and voting on skipping songs should be fair 
-for all clients. A protocol that supports all these features must be devised.
+adding songs to the queue. Apart from choosing the name for the party and 
+being responsible for the playback, in terms of voting, the host will have 
+the same rights as the other clients in the system.
+Clients can \emph{downvote} a specific song, and once a majority of clients 
+downvoted a song, it will be removed from the queue.  
+Past sessions will be kept, so the users can review playlists at a later date.\\\\
+%
+The primary source of music will be YouTube. Clients send their song request 
+in the form of a youtube URL to the host. The host will then download and cache the
+audio from YouTube one song ahead of time to allow continuous playback. This will allow
+us to keep a large playlist without having to store all songs at once.\\\\
+%
+The challenges in this project are as follows: 
+\begin{itemize}
+	\item Automatically announcing and finding other \emph{Kompose} services on the network.
+	\item Synchronizing the playlist state to all devices.
+	\item Keeping track of all clients that are still alive to allow the majority based voting.
+	\item Adding new songs to the playlist, and voting on skipping songs should be fair for all clients.
+	\item Finally, a protocol that supports all these features must be devised.
+\end{itemize}
 
 \section{System Overview}
 \subsection{Client/Server architecture}
-The host device will act as the server in our system. All communication is
-done over the host, i.e. there is no peer-to-peer communication between
-clients. Our communication protocol will provide functionality such as:
-registering a client, unregistering a client, sending a song request,
-voting to skip a song, and sending the playlist state (including all songs
-in the play queue, at the received downvotes for each of the songs) to the clients.
-To add some resilience against clients dropping off the network,
-clients send a keep-alive message to the host every few seconds.
 
+Each device running the app can choose to become host, at which point it will
+act as the server in our system. All communication is done over these hosts, 
+i.e. there is no peer-to-peer communication between other clients.
+To support this, we will define a custom application-level communication protocol 
+and will provide at least the following functionality:
+\begin{itemize}
+\item Sending client registration and deregistration messages
+\item Sending song requests and skip messages from clients to server.
+\item Aliveness messages for clients, to determine whether a participant and/or host is still active
+\item Sending playlist state (including all songs in the play queue, at the received downvotes for each of the songs) to the clients.
+\item Various error messages
+\end{itemize}
+%
+The messages of this protocol will be transported over TCP in the form of JSON documents.\\\\
+%
 Both client and server listen on the network for messages,
 the host for requests from the clients, and the clients for state updates
 from the host. To avoid manual IP/port configuration, \emph{Network Service Discovery}
 \cite{nsd} is used. This gives the clients the hosts' IP and port,
 to which they can send a \emph{register} messgage containing the IP and port they
-will be listening on for state updates.
-
-For messaging, a JSON based protocol will be used over TCP.
+will be listening on for state updates. \\\\
+%
+Once a client is connected to the host, he can start sending song request and vote messages.
+Song requests will cause the corresponding song to be added to the playlist unless
+it already exists in the queue. Vote-Skip messages help make the participants reach
+consensus over which songs they want to play. Once a song receives skip requests
+from a majority of the clients, the song will be removed from the playlist.\\\\ 
+%
+To add some resilience against clients dropping off the network, clients periodically 
+send a keep-alive message to their host every few seconds, and vice-versa.
+If a client becomes unresponsive, he will be dropped from the party and the maximum number of votes
+necessary to remove a song from the playlist will decrease accordingly. This serves to
+ensure that the voting system does not become unresponsive should a majority of clients crash.\\\\
+%
+In the case that the host crashes or become otherwise unreachable, then the party will be 
+disolved gracefully. If time allows, we may also explore options to dynamically switch 
+the host to one of the party members.
+%
 
 \subsection{User interface}
-Figure 1 shows a mockup of the user interface design. The start screen
-(top center) allows the user to either join or create a party. The host chooses
-a party name, while the clients will listen for a service announcement
-from a host. If an announcement is received, the party name shows up
-in a list and can be joined.
-
-The playlist view has a list of all items currently in the play queue.
-Every list item has a button to downvote.
-
-Past playlist are available from the home screen, or from the action bar
-overflow menu in the playlist view, which also has an option to leave a party.
-
+The \emph{Kompose} app will consist of at least 6 different activities in total, 
+each serving a unique purpose, as well as several popup windows which will offer 
+further options to the user. \\\\
+%
+Figure 1 shows a mockup of this user interface design. The start screen
+(top center) allows the user to either join a pre-existing party, or 
+create an entirely new one. When creating a new party, the host chooses 
+a new name which will be visible for all clients in the LAN, and then
+proceeds to the playlist itself. Here he will continuously listen for new
+connections and send out new discovery messages in periodic intervals. \\\\
+%
+When choosing to join a party, the clients will be sent to a different
+activity that displays a list of all currently available parties.
+If an announcement from a host is received, the party name shows up in 
+this list and can be joined. Once the choice is made, the client is sent
+to the main playlist interface. \\\\
+%
+In addition to these two options, there is also a third which will send 
+the user to the history of all playlists of previous sessions.
+Once a party is closed, the current playlist is saved on local storage,
+so that they can later be viewed by the user. This feature is non-critical 
+for the proper function of the app, but it is nonetheless a welcome service
+for the user. \\\\
+%
+The main playlist interface will display a list of all items currently in 
+the play queue. This queue is displayed in the order in which songs will be 
+played by the host, from first to last in line. Each list element will display 
+at least the title of the file, as well as the URL from where the audio has 
+been retrieved. Finally, each list item includes a designated downvote button,
+which serves to cause unpopular songs to be removed from the queue. As soon as 
+a majority of the clients deem a song bad, it will no longer appear in the queue. \\\\
+%
 The host will additionally have a play/pause button in the action bar.
 
 \subsection{YouTube file downloads}
-The host fetches songs from YouTube by using a library \cite{youtubeExtractor}
+Songs are fetched from YouTube by the host only, using a library \cite{youtubeExtractor}
 to extract the URL for the audio file. Songs in the play queue are pre-fetched
-to guarantee continuous playback. The number of items that are cached can be
-configured in the settings. This is of course handled asynchronously in
+one song ahead of time to guarantee continuous playback. The number of items that 
+are cached can be configured in the settings. This is of course handled asynchronously in
 the background.
 
 \section{Requirements}
@@ -213,7 +257,7 @@ the background.
 % initial runs of your .tex file to
 % produce the bibliography for the citations in your paper.
 \bibliographystyle{abbrv}
-\bibliography{report}  % sigproc.bib is the name of the Bibliography in this case
+\bibliography{report}  % .bib is the name of the Bibliography in this case
 % You must have a proper ".bib" file
 
 %\balancecolumns % GM June 2007
