proof-read text

--- a/proposal-tex/proposal.tex
+++ b/proposal-tex/proposal.tex
@@ -156,7 +156,7 @@ and will provide at least the following functionality:
 \item Various error messages
 \end{itemize}
 %
-The messages of this protocol will be transported over TCP in the form of JSON documents.\\\\
+The messages of this protocol will be transported over TCP in the form of JSON.\\\\
 %
 Both client and server listen on the network for messages,
 the host for requests from the clients, and the clients for state updates
