Added Settings Fragment

--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Kompose</string>
+
+    <!-- Settings Strings -->
+    <string name="settings_menu">Settings</string>
+    <string name="setting_category_host">Host Settings</string>
+    <string name="setting_category_client">Client Settings</string>
+    <string name="setting_preload">Number of songs to preload</string>
+    <string name="setting_username">Username</string>
 </resources>
